fix icon only for flag, because icon is shifted #455

--- a/web/themes/quartiers_solidaires/assets/components/atoms/icon/icon.scss
+++ b/web/themes/quartiers_solidaires/assets/components/atoms/icon/icon.scss
@@ -4,11 +4,9 @@
   display: inline-flex;
   align-self: center;
   position: relative;
-  top: -1px;
   color: inherit;
   width: $icon-size-base;
   height: $icon-size-base;
-  padding: 1px;
 
   svg {
     width: $icon-size-base;
